Dockerize microservices